llvm/test/tools/llvm-mca/RISCV/XiangShan/no-sew-fp-8-16.s
# NOTE: Assertions have been autogenerated by utils/update_mca_test_checks.py
# RUN: not llvm-mca -mtriple=riscv64 -mcpu=xiangshan-kunminghu -iterations=1 < %s 2>&1 | FileCheck %s

# Kunminghu does not support the Zvfhmin and Zvfh extensions,
# then floating-point SEW can only be 64 and 32, not 16 and 8.
vsetvli zero, zero, e16, m1, tu, mu
vfdiv.vv v4, v8, v12

# CHECK:      error: found an unsupported instruction in the input assembly sequence.
# CHECK-NEXT: note: instruction: 	vfdiv.vv	v4, v8, v12
